--- a/userAdd.html
+++ b/userAdd.html
@@ -48,21 +48,7 @@
 
             <!-- 头部开始 -->
             <div class="pageheader">
-
-
                 <h2><i class="fa fa-user fa-5x" style="line-height: 48px;padding-left: 1px;"></i> 用户添加</h2>
-
-
-                <div class="breadcrumbs">
-                    <ol class="breadcrumb">
-                        <li>你在这里</li>
-                        <li><a href="userAdd.html">用户添加</a></li>
-                        <li><a href="index.html">你要去哪</a></li>
-                        <li class="active">首页</li>
-                    </ol>
-                </div>
-
-
             </div>
             <!-- 头部结束 -->
 
@@ -265,16 +251,16 @@
         data:{
             params:{
                 userId:null,
-                userName:"1",
-                userAccount:"",
-                userPwd:"",
-                userEmail:"",
+                userName:null,
+                userAccount:null,
+                userPwd:null,
+                userEmail:null,
                 userAge:null,
-                userPhone:"",
+                userPhone:null,
                 userSex:-1,
                 userState:-1,
                 userPermissions:-1,
-                userHead:""
+                userHead:null
             },
         },
         mounted:function(){
