--- a/vagetableQuery.html
+++ b/vagetableQuery.html
@@ -118,13 +118,14 @@
                                 <tr>
                                     <th style="width: 60px;">序号</th>
                                     <th class="sortable sort-alpha sort-asc" style="width: 80px;">编号</th>
-                                    <th class="sort-alpha">姓名</th>
-                                    <th class="sort-alpha">密码</th>
-                                    <th class="sort-alpha">账号</th>
-                                    <th class="sortable sort-alpha" style="width: 60px;">年龄</th>
-                                    <th class="sort-alpha" style="width: 60px;">性别</th>
-                                    <th class="sort-alpha"style="width: 90px;">权限</th>
-                                    <th class="sort-alpha"style="width: 60px;">状态</th>
+                                    <th class="sort-alpha">图片</th>
+                                    <th class="sort-alpha">名称</th>
+                                    <th class="sort-alpha">别称</th>
+                                    <th class="sort-alpha">类别</th>
+                                    <th class="sort-alpha">食用方式</th>
+                                    <th class="sort-alpha">营养价值</th>
+                                    <th class="sort-alpha">主要品种</th>
+                                    <th class="sort-alpha">生长时间</th>
                                     <th style="width: 80px;">编辑</th>
                                 </tr>
                                 </thead>
