--- a/navigationMenu.html
+++ b/navigationMenu.html
@@ -403,12 +403,12 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="vagetableQuery.html">
+                                <a href="vegetableQuery.html">
                                     <i class="fa fa-search" ></i> 蔬菜查询
                                 </a>
                             </li>
                             <li>
-                                <a href="vagetableAdd.html">
+                                <a href="vegetableAdd.html">
                                     <i class="fa fa-plus-circle"></i> 蔬菜添加
                                 </a>
                             </li>
