--- a/vegetableQuery.html
+++ b/vegetableQuery.html
@@ -78,21 +78,21 @@
 
                                 <div class="col-sm-2 col-xs-2">
                                     <label>蔬菜名称</label>
-                                    <input type="text" class="form-control" style="width: 150px">
+                                    <input v-model="params.vName" type="text" class="form-control" style="width: 150px">
                                 </div>
                                 <div class="col-sm-2 col-xs-2">
                                     <label>营养成份</label>
-                                    <input type="text" class="form-control" style="width: 150px">
+                                    <input v-model="params.nutrients" type="text" class="form-control" style="width: 150px">
                                 </div>
                                 <div class="col-sm-2 col-xs-2">
                                     <label>类别</label>
-                                    <select class="form-control" style="width: 100px">
-                                        <option value="-1">请选择状态</option>
+                                    <select v-model="params.typeId" class="form-control" style="width: 100px">
+                                        <option value="null">选择类别</option>
                                     </select>
                                 </div>
                                 <div class="col-sm-2 col-xs-2">
                                     <label>选择条数</label>
-                                    <select class="form-control" style="width: 100px">
+                                    <select v-model="params.pageSize" class="form-control" style="width: 100px">
                                         <option value="5">5</option>
                                         <option value="10">10</option>
                                         <option value="15">15</option>
@@ -100,7 +100,7 @@
                                 </div>
 
                                 <div class="col-sm-3 col-xs-3">
-                                    <button  class="btn btn-primary" style="margin-top: 26px;">查询</button>
+                                    <button @click="selectVegetable()" class="btn btn-primary" style="margin-top: 26px;">查询</button>
                                 </div>
 
 
@@ -115,22 +115,35 @@
 
                             <table class="table table-bordered table-sortable">
                                 <thead>
-                                <tr>
-                                    <th style="width: 60px;">序号</th>
-                                    <th class="sortable sort-alpha sort-asc" style="width: 80px;">编号</th>
-                                    <th class="sort-alpha">图片</th>
-                                    <th class="sort-alpha">名称</th>
-                                    <th class="sort-alpha">别称</th>
-                                    <th class="sort-alpha">类别</th>
-                                    <th class="sort-alpha">食用方式</th>
-                                    <th class="sort-alpha">营养价值</th>
-                                    <th class="sort-alpha">主要品种</th>
-                                    <th class="sort-alpha">生长时间</th>
-                                    <th style="width: 80px;">编辑</th>
-                                </tr>
+                                    <tr>
+                                        <th class="sortable sort-alpha sort-asc" style="width: 80px;">编号</th>
+                                        <th class="sort-alpha">图片</th>
+                                        <th class="sort-alpha">名称</th>
+                                        <th class="sort-alpha">别称</th>
+                                        <th class="sort-alpha">类别</th>
+                                        <th class="sort-alpha">食用方式</th>
+                                        <th class="sort-alpha">营养成分</th>
+                                        <th class="sort-alpha">主要品种</th>
+                                        <th class="sort-alpha">生长时间</th>
+                                        <th style="width: 100px;">编辑</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
-
+                                    <tr v-for="(data,index) in dataList">
+                                        <td>{{data.vid}}</td>
+                                        <td><img v-bind:src="data.image" width="60px" height="40px"></td>
+                                        <td>{{data.vname}}</td>
+                                        <td v-bind:title="data.vnickname">{{(data.vnickname).length > 15 ? (data.vnickname).substring(0,15) + '...':data.vnickname}}</td>
+                                        <td>{{data.typeId}}</td>
+                                        <td>{{data.eatWay}}</td>
+                                        <td v-bind:title="data.nutrients">{{data.nutrients.length > 15 ? (data.nutrients).substring(0,15) + '...':data.nutrients}}</td>
+                                        <td>{{data.varieties}}</td>
+                                        <td>{{data.growingTime}}</td>
+                                        <td>
+                                            <a title="编辑"><i class="fa fa-edit fa-2x" aria-hidden="true" ></i></a>
+                                            <a title="删除"><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></a>
+                                        </td>
+                                    </tr>
                                 </tbody>
                             </table>
 
@@ -138,23 +151,12 @@
                         </div>
                         <!-- /tile body -->
 
-
                         <!-- tile footer -->
                         <div class="tile-footer bg-transparent-black-2 rounded-bottom-corners">
                             <div class="row">
-
-                                <!-- <div class="col-sm-2">
-
-                                 </div>-->
-
-                                <!-- <div class="col-sm-4 text-center">
-                                     <small class="inline table-options paging-info">showing 1-3 of 24 items</small>
-                                 </div>-->
-
                                 <div class="text-center">
                                     <div id="page"></div>
                                 </div>
-
                             </div>
                         </div>
                         <!-- /tile footer -->
@@ -201,12 +203,67 @@
     $("#menuContainer").load("navigationMenu.html");
     //设置菜单缓存
     window.sessionStorage.setItem("menu","vagetableQueryMenu");
+
+    $(function () {
+
+    })
 </script>
 <script>
     var vm = new Vue({
         el:"#content",
         data:{
+            params:{
+                vName:null,
+                nutrients:null,
+                typeId:null,
+                pageSize:5,
+                currentPage:1,
+                pages:1  //初始化总页数
+            },
+            dataList:[],
+        },
 
+        mounted:function(){
+          //初始化分页
+            var options = {
+                bootstrapMajorVersion: 1,
+                currentPage: this.params.currentPage, // 当前页数
+                numberOfPages: 5, // 显示按钮的数量
+                totalPages: this.params.pages, // 总页数
+                onPageClicked:function(event, originalEvent, type,page){
+                    vm.params.currentPage=page;
+                    vm.selectVegetable();
+                },
+                onPageChanged:function(event, oldPage, newPage){
+                    vm.params.currentPage=newPage;
+                    vm.selectVegetable();
+                }
+            };
+            $("#page").bootstrapPaginator(options);
+
+            this.selectVegetable();
+        },
+
+        methods:{
+            //查询满足条件的蔬菜信息
+           selectVegetable:function () {
+               $.ajax({
+                   url:"http://localhost:9000/vegetableInfo/selectVegetable",
+                   type:"GET",
+                   dataType:"json",
+                   data: this.params,
+                   success:function (data) {
+                       if (data.code === 0){
+                           console.log(data);
+                           vm.dataList = data.dataList;//查询到的数据
+                           vm.params.pages = data.pages;//总页数
+                           vm.params.currentPage = data.pageNum //第几页
+                           //设置分页(当前页,总页数)
+                           $("#page").bootstrapPaginator('setOptions',{currentPage:vm.params.currentPage,totalPages:vm.params.pages});
+                       }
+                   }
+               });
+           }
         }
     })
 </script>
